Adding get account routine
