# src/main/java/com/pismo/interview/domain/account/AccountService.java
@@ -1,6 +1,8 @@
 package com.pismo.interview.domain.account;
 
+import com.pismo.interview.domain.account.dto.AccountDto;
 import com.pismo.interview.infrastructure.account.AccountClient;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
 @Service
@@ -14,5 +16,12 @@ public class AccountService {
 
     public void create(String documentNumber) {
         accountClient.create(documentNumber);
+    }
+
+    @Cacheable(value = "Account")
+    public AccountDto find(Long accountId) {
+        var account = accountClient.find(accountId);
+
+        return new AccountDto(account.getId(), account.getDocumentNumber());
     }
 }
