# src/main/java/com/pismo/interview/infrastructure/account/AccountClient.java
@@ -1,6 +1,7 @@
 package com.pismo.interview.infrastructure.account;
 
 import com.pismo.interview.infrastructure.account.entity.Account;
+import com.pismo.interview.infrastructure.commons.exceptions.EntityNotFoundException;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Component;
@@ -28,5 +29,9 @@ public class AccountClient {
 
             throw exception;
         }
+    }
+
+    public Account find(Long accountId) {
+        return accountRepository.findById(accountId).orElseThrow(() -> new EntityNotFoundException(Account.class.getSimpleName()));
     }
 }
